<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:cardBackgroundColor="@color/white">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp">

            <TextView
                android:id="@+id/titleNameCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textSize="16sp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/nameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/adidas"
                android:textSize="16sp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="60dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/titleNameCode"/>

            <TextView
                android:id="@+id/titleVendorCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vendor_code"
                android:textSize="16sp"
                android:layout_marginTop="5dp"
                android:layout_marginStart="10dp"
                app:layout_constraintTop_toBottomOf="@id/titleNameCode"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/codeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Some Code"
                android:textSize="16sp"
                android:layout_marginTop="5dp"
                android:layout_marginStart="12dp"
                app:layout_constraintTop_toBottomOf="@id/nameTextView"
                app:layout_constraintStart_toEndOf="@id/titleVendorCode"/>

            <TextView
                android:id="@+id/titleBrand"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/brand"
                android:textSize="16sp"
                android:layout_marginTop="5dp"
                android:layout_marginStart="10dp"
                app:layout_constraintTop_toBottomOf="@id/titleVendorCode"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/brandTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/adidas"
                android:textSize="16sp"
                android:layout_marginTop="5dp"
                android:layout_marginStart="60dp"
                app:layout_constraintTop_toBottomOf="@id/codeTextView"
                app:layout_constraintStart_toEndOf="@id/titleBrand"/>


            <TextView
                android:id="@+id/titleSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/size"
                android:textSize="16sp"
                android:layout_marginTop="5dp"
                android:layout_marginStart="10dp"
                app:layout_constraintTop_toBottomOf="@id/titleBrand"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/sizeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_8uk"
                android:textSize="16sp"
                android:layout_marginTop="5dp"
                android:layout_marginStart="73dp"
                app:layout_constraintTop_toBottomOf="@id/brandTextView"
                app:layout_constraintStart_toEndOf="@id/titleSize"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>